--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Mohanraj Venkatachalam</h1>
-												<p><a href="resume/Resume_Official.pdf" style="color:red">Download Resume <i class="icon-download4"></i></a></p>
+												<p><a href="resume/Resume Mohanraj V.pdf" style="color:red">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -113,7 +113,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm a Hard worker</h1>
-												<p><a href="resume/Resume_Official.pdf" style="color:red">Download Resume <i class="icon-download4"></i></a></p>
+												<p><a href="resume/Resume Mohanraj V.pdf" style="color:red">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -128,7 +128,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>Learner and also a Developer</h1>
-												<p><a href="resume/Resume_Official.pdf" style="color:red">Download Resume<i class="icon-briefcase3"></i></a></p>
+												<p><a href="resume/Resume Mohanraj V.pdf" style="color:red">Download Resume<i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -143,7 +143,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>I am <br>Travelor</h1>
-												<p><a href="resume/Resume_Official.pdf" style="color:red" style="color:red">Download Resume<i class="icon-briefcase3"></i></a></p>
+												<p><a href="resume/Resume Mohanraj V.pdf" style="color:red" style="color:red">Download Resume<i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
